style.css
body{
  background-image: url("fabric_1.png");
}

.container{
  background: white;
  height: auto;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
  border-style: solid;
  border-width: 1px;
  overflow: auto;
  margin-bottom: 100px;
  margin-top: 50px;
}

#rahatPortfolio{
  margin-left: 20px;
}


.mee{
  margin-left: 250px;
}

#socialContainer{
  margin-top: 20px;
  margin-left: 475px;
}

